@@ -4,6 +4,7 @@
 	- rrset id is updated to invalidate all the message cache entries
 	  that refer to NSEC, NSEC3, DNAME rrsets that have changed.
 	- val_util work
+	- val_sigcrypt file for validator signature checks.
 
 6 August 2007: Wouter
 	- key cache for validator.
